# tefi-oracle-contracts

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build_release.sh
.github/workflows/: release-artifacts.yml
artifacts/: checksums.txt  oracle_hub.wasm  oracle_proxy_band.wasm  oracle_proxy_chainlink.wasm  oracle_proxy_feed.wasm  oracle_proxy_template.wasm
contracts/oracle-hub/: Cargo.toml  README.md
contracts/oracle-hub/examples/: schema.rs
contracts/oracle-hub/schema/: all_sources_response.json  asset_symbol_map_response.json  config_response.json  execute_msg.json  instantiate_msg.json  legacy_price_response.json  price_list_response.json  price_response.json  proxy_list_response.json  proxy_whitelist_response.json  query_msg.json  sources_response.json
contracts/oracle-hub/src/: contract.rs  handle.rs  lib.rs  query.rs  state.rs
contracts/oracle-hub/src/testing/: mock_querier.rs  tests.rs
contracts/oracle-proxy-band/: Cargo.toml  README.md
contracts/oracle-proxy-band/src/: contract.rs  msg.rs  state.rs
contracts/oracle-proxy-candle/: Cargo.toml
contracts/oracle-proxy-candle/src/: contract.rs  msg.rs
contracts/oracle-proxy-chainlink/: Cargo.toml  README.md
contracts/oracle-proxy-chainlink/src/: contract.rs  msg.rs  state.rs
contracts/oracle-proxy-feed/: Cargo.toml  README.md
contracts/oracle-proxy-feed/src/: contract.rs  msg.rs  state.rs
contracts/oracle-proxy-template/: Cargo.toml  README.md
contracts/oracle-proxy-template/src/: contract.rs  lib.rs  msg.rs  state.rs
