[package]
name = "oracle-hub"
version = "0.2.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Oracle Hub contract for Terra token assets"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cw2 = { version = "1.0.1" }
tefi-oracle = { path = "../../packages/tefi-oracle", version = "0.2.0", features = ["internal"]}
cosmwasm-std = { version = "1.2.1" }
cw-storage-plus = { version = "1.0.1" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.2.1" }
